# rust_term_mods

./: Cargo.toml  README.md  run_all_examples.sh
.github/workflows/: rust.yml
examples/: 24bit_colors.rs  256_colors.rs  basic_colors.rs  terminal.rs  text_attrs.rs
src/: attrs.rs  colors.rs  display.rs  lib.rs  term.rs  terminal.rs  tests.rs  write.rs
